--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,94 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   
+    <!-- Header -->
+    <header>
+        <nav>
+            <a href="/">WebStudio</a>
+            <ul>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="/">Портфолио</a></li>
+                <li><a href="/">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+        <!-- Filter -->
+    <section class="filter">
+        <ul>
+            <li><button type="button">Все</button></li>
+            <li><button type="button">Веб-сайты</button></li>
+            <li><button type="button">Приложения</button></li>
+            <li><button type="button">Дизайн</button></li>
+            <li><button type="button">Маркетинг</button></li>
+        </ul>
+    </section>
+        <!-- Main -->
+    <main>
+        <h1 hidden>Нашы роботы</h1>
+        <section>
+            <ul>
+                <li>
+                    <img src="./images/img1.jpg" alt="Ноутбук с открытым веб-сайтом">
+                    <h3>Технокряк</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/img2.jpg" alt="Два баскетболиста борются за мяч">
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/img3.jpg" alt="Логотип ресторана">
+                    <h3>Ресторан Seafood</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/img4.jpg" alt="Изображение наушников">
+                    <h3>Проект Prime</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/img5.jpg" alt="Белая и коричневая коробки">
+                    <h3>Проект Boxes</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/img6.jpg" alt="Монитор с открытым веб-сайтом">
+                    <h3  lang="eng">Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/img7.jpg" alt="Страницы открытого журнала">
+                    <h3>Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/img8.jpg" alt="Этикетка">
+                    <h3>Проект LAB</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/img9.jpg" alt="Работа за ноутбуком">
+                    <h3>Growing Business</h3>
+                    <p>Приложение</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="/">WebStudio</a>
+        <address>
+            <ul>
+                <li> <a href="https://goo.gl/maps/kqxBph1CpzEgeCtw7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
+                        Леси Украинки, 26</a> </li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
