--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="/">WebStudio</a>
             <ul>
                 <li><a href="/">Студия</a></li>
-                <li><a href="/">Портфолио</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="/">Контакты</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
    </div>
    <main>
         <section>
-            <h2>Наши преимущества</h2> 
+            <h2 hidden>Наши преимущества</h2> 
             <ul>
                 <li>
                     <p>Внимание к деталям</p>
