--- a/portfolio.html
+++ b/portfolio.html
@@ -18,19 +18,19 @@
             <a class="link logo" href="/"><span>Web</span>Studio</a>
             <ul class="list header-list">
                 <li class="header-item">
-                    <a href="./index.html">Студия</a>
+                    <a class="link header-link" href="/">Студия</a>
                 </li>
                 <li class="header-item">
-                    <a href="/">Портфолио</a>
+                    <a class="link header-link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="header-item">
-                    <a href="/">Контакты</a>
+                    <a class="link header-link" href="/">Контакты</a>
                 </li>
             </ul>
         </nav>
         <ul class="list">
-            <li><a class='link mail' href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
         <!-- Filter -->
