--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- Header -->
     <header class="header">
         <nav class="header-nav">
-            <a class="link logo" href="/"><span>Web</span>Studio</a>
+            <a class="link header-logo" href="/"><span>Web</span>Studio</a>
             <ul class="list header-list">
                 <li class="header-item">
-                    <a class="link header-link" href="/">Студия</a></li>
+                    <a class="link header-link current" href="/">Студия</a></li>
                 <li class="header-item">
                     <a class="link header-link" href="./portfolio.html">Портфолио</a></li>
                 <li class="header-item">
@@ -25,12 +26,13 @@
             </ul>
         </nav>
         <ul class="list header-contact">
-            <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link header-mail contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link header-tel contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <!-- HERO -->
    <div>
-       <section  class="hero">
+        <section  class="hero">
            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
            <button type="button" class="hero-btn">Заказать услугу</button>
        </section>
@@ -40,20 +42,20 @@
             <h2 hidden>Наши преимущества</h2> 
             <ul class="list benefits-list">
                 <li class="benefits-item">
-                    <p>Внимание к деталям</p>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="benefits-title">Внимание к деталям</p>
+                    <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="benefits-item">
-                        <p>Пунктуальность</p>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <p class="benefits-title">Пунктуальность</p>
+                        <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="benefits-item">
-                        <p>Планирование</p>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <p class="benefits-title">Планирование</p>
+                        <p class="benefits-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="benefits-item">
-                        <p>Современные технологии</p>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <p class="benefits-title">Современные технологии</p>
+                        <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
             </ul>
         </section>
@@ -97,13 +99,14 @@
             </ul>
         </section>
    </main>
+    <!-- Footer -->
    <footer class="footer">
-        <a class="link logo" href="/"><span>Web</span>Studio</a>
+        <a class="link footer-logo" href="/"><span>Web</span>Studio</a>
        <address>
             <ul class="list footer-list">
-                <li> <a class="link" href="https://goo.gl/maps/kqxBph1CpzEgeCtw7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>  </li>
-                <li><a class="link mail" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="link tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li> <a class="link address contact" href="https://goo.gl/maps/kqxBph1CpzEgeCtw7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>  </li>
+                <li><a class="link footer-mail contact" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link footer-tel contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
    </footer>
