--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,13 @@
     <!-- Header -->
     <header class="header">
         <nav class="header-nav">
-            <a class="link logo" href="/"><span>Web</span>Studio</a>
+            <a class="link header-logo" href="/"><span>Web</span>Studio</a>
             <ul class="list header-list">
                 <li class="header-item">
-                    <a class="link header-link" href="/">Студия</a>
+                    <a class="link header-link" href="./index.html">Студия</a>
                 </li>
                 <li class="header-item">
-                    <a class="link header-link" href="./portfolio.html">Портфолио</a>
+                    <a class="link header-link current" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="header-item">
                     <a class="link header-link" href="/">Контакты</a>
@@ -29,27 +29,27 @@
             </ul>
         </nav>
         <ul class="list">
-            <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link header-mail contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link header-tel contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
         <!-- Filter -->
     <section class="filter">
         <ul class="list filter-list">
             <li class="filter-item">
-                <button type="button">Все</button>
+                <button type="button" class="filter-btn">Все</button>
             </li>
             <li class="filter-item">
-                <button type="button">Веб-сайты</button>
+                <button type="button" class="filter-btn">Веб-сайты</button>
             </li>
             <li class="filter-item">
-                <button type="button">Приложения</button>
+                <button type="button" class="filter-btn">Приложения</button>
             </li>
             <li class="filter-item">
-                <button type="button">Дизайн</button>
+                <button type="button" class="filter-btn">Дизайн</button>
             </li>
             <li class="filter-item">
-                <button type="button">Маркетинг</button>
+                <button type="button" class="filter-btn">Маркетинг</button>
             </li>
         </ul>
     </section>
@@ -59,47 +59,47 @@
         <section class="main">
             <ul class="list main-list">
                 <li class="main-item">
-                    <img src="./images/img1.jpg" alt="Ноутбук с открытым веб-сайтом">
+                    <img src="./images/img1.jpg" alt="Ноутбук с открытым веб-сайтом" width="370">
                     <h3 class="main-title">Технокряк</h3>
                     <p class="main-text">Веб-сайт</p>
                 </li>
                 <li class="main-item">
-                    <img src="./images/img2.jpg" alt="Два баскетболиста борются за мяч">
+                    <img src="./images/img2.jpg" alt="Два баскетболиста борются за мяч" width="370">
                     <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
                     <p class="main-text">Дизайн</p>
                 </li>
                 <li class="main-item">
-                    <img src="./images/img3.jpg" alt="Логотип ресторана">
+                    <img src="./images/img3.jpg" alt="Логотип ресторана" width="370">
                     <h3 class="main-title">Ресторан Seafood</h3>
                     <p class="main-text">Приложение</p>
                 </li>
-                <l cslaclass="main-item">
-                    <img src="./images/img4.jpg" alt="Изображение наушников">
+                <li class="main-item">
+                    <img src="./images/img4.jpg" alt="Изображение наушников" width="370">
                     <h3 class="main-title">Проект Prime</h3>
                     <p class="main-text">Маркетинг</p>
-                </l>
+                </li>
                 <li class="main-item">
-                    <img src="./images/img5.jpg" alt="Белая и коричневая коробки">
+                    <img src="./images/img5.jpg" alt="Белая и коричневая коробки" width="370">
                     <h3 class="main-title">Проект Boxes</h3>
                     <p class="main-text">Приложение</p>
                 </li>
                 <li class="main-item">
-                    <img src="./images/img6.jpg" alt="Монитор с открытым веб-сайтом">
-                    <h3 class="main-title"  lang="eng">Inspiration has no Borders</h3>
+                    <img src="./images/img6.jpg" alt="Монитор с открытым веб-сайтом" width="370">
+                    <h3 class="main-title">Inspiration has no Borders</h3>
                     <p class="main-text">Веб-сайт</p>
                 </li>
                 <li class="main-item">
-                    <img src="./images/img7.jpg" alt="Страницы открытого журнала">
+                    <img src="./images/img7.jpg" alt="Страницы открытого журнала" width="370">
                     <h3 class="main-title">Издание Limited Edition</h3>
                     <p class="main-text">Дизайн</p>
                 </li>
                 <li class="main-item">
-                    <img src="./images/img8.jpg" alt="Этикетка">
+                    <img src="./images/img8.jpg" alt="Этикетка" width="370">
                     <h3 class="main-title">Проект LAB</h3>
                     <p class="main-text">Маркетинг</p>
                 </li>
                 <li class="main-item">
-                    <img src="./images/img9.jpg" alt="Работа за ноутбуком">
+                    <img src="./images/img9.jpg" alt="Работа за ноутбуком" width="370">
                     <h3 class="main-title">Growing Business</h3>
                     <p class="main-text">Приложение</p>
                 </li>
@@ -108,13 +108,13 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <a class="link logo" href="/"><span>Web</span>Studio</a>
+        <a class="link footer-logo" href="/"><span>Web</span>Studio</a>
         <address>
             <ul class="list footer-list">
-                <li> <a class="link" href="https://goo.gl/maps/kqxBph1CpzEgeCtw7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
-                        Леси Украинки, 26</a> </li>
-                <li><a class="link mail" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="link tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li> <a class="link address contact" href="https://goo.gl/maps/kqxBph1CpzEgeCtw7" target="_blank"
+                        rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a> </li>
+                <li><a class="link footer-mail contact" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link footer-tel contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
