--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     </section>
         <!-- Main -->
     <main>
-        <h1 hidden>Нашы роботы</h1>
+        <h1 class="visually-hidden">Нашы роботы</h1>
         <section class="main">
             <ul class="list main-list">
                 <li class="main-item">
