--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    </div>
    <main>
         <section class="benefits">
-            <h2 hidden>Наши преимущества</h2> 
+            <h2 class="visually-hidden">Наши преимущества</h2> 
             <ul class="list benefits-list">
                 <li class="benefits-item">
                     <p class="benefits-title">Внимание к деталям</p>
