--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <section class="filter">
         <ul class="list filter-list">
             <li class="filter-item">
-                <button type="button" class="filter-btn">Все</button>
+                <button type="button" class="filter-btn all">Все</button>
             </li>
             <li class="filter-item">
                 <button type="button" class="filter-btn">Веб-сайты</button>
